feat(indexers): Add multi-source tracking for deduplicated releases
- Add sourceIndexers field to ReleaseResult type to track all indexers
  that returned the same release (matched by info hash)
- Update ReleaseDeduplicator to collect all source indexers when
  deduplicating, keeping the best version while crediting all sources
- Update SearchResultRow UI to display all source indexers (e.g.,
  "YTS, Knaben") instead of just the primary indexer name
- Add Knaben aggregator indexer definition
- Fix console.log in RequestBuilder (now uses logger.debug)
- Update INDEXERS.md with deduplication documentation and Knaben support

This fixes the perceived issue where YTS results appeared to be missing.
The torrents were being deduplicated in favor of Knaben (which indexes
the same YTS torrents with better seeder data). Now users can see which
indexers had each release.

--- a/data/indexers/definitions/yts.yaml
+++ b/data/indexers/definitions/yts.yaml
@@ -39,7 +39,7 @@ search:
     - path: /api/v2/list_movies.json
       method: get
       inputs:
-        query_term: '{{ if .Query.IMDBID }}{{ .Query.IMDBID }}{{ else }}{{ .Keywords }}{{ end }}'
+        query_term: '{{ or .Query.IMDBID .Keywords }}'
         limit: '50'
         sort_by: seeds
 
