refactor: simplify Docker setup and consolidate environment config
- Consolidate docker-compose files into single self-documenting file
- Merge .env.docker.example into .env.example with Docker section
- Use simpler variable names (PUID/PGID instead of CINEPHAGE_*)
- Add all missing environment variables to .env.example
- Update installation and deployment docs

Deleted:
- docker-compose.build.yaml (merged as commented option)
- .env.docker.example (consolidated into .env.example)

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,19 @@
 # Copy this file to .env and configure your settings
 
 # =============================================================================
+# DOCKER CONFIGURATION
+# =============================================================================
+# These settings are used by docker-compose.yaml
+# For Docker: set MEDIA_PATH, everything else has sensible defaults
+
+# Path to your media library (REQUIRED for Docker)
+MEDIA_PATH=/path/to/your/media
+
+# User/Group IDs to run as (find yours: id -u && id -g)
+PUID=1000
+PGID=1000
+
+# =============================================================================
 # SERVER CONFIGURATION
 # =============================================================================
 
@@ -15,6 +28,10 @@
 # Trusted origin for CSRF protection
 # Set this if you access Cinephage via a different URL than localhost
 # ORIGIN=http://192.168.1.100:3000
+
+# Timezone for scheduled tasks and logs
+# Find yours: timedatectl list-timezones
+# TZ=UTC
 
 # =============================================================================
 # LOGGING CONFIGURATION
@@ -45,21 +62,115 @@
 # FFPROBE_PATH=/usr/bin/ffprobe
 
 # =============================================================================
-# WORKER CONFIGURATION (Advanced)
+# WORKER CONFIGURATION
 # =============================================================================
-
 # Maximum concurrent workers by type
-# Adjust these based on your system resources
+# Adjust based on your system resources
+
+# Stream workers - for proxying HLS streams (default: 10)
 # WORKER_MAX_STREAMS=10
+
+# Import workers - for moving/copying downloaded files (default: 5)
 # WORKER_MAX_IMPORTS=5
+
+# Scan workers - for library folder scanning (default: 2)
 # WORKER_MAX_SCANS=2
+
+# Monitoring workers - for automated search tasks (default: 5)
 # WORKER_MAX_MONITORING=5
+
+# Search workers - for indexer searches (default: 3)
+# WORKER_MAX_SEARCH=3
+
+# Subtitle search workers - for subtitle provider searches (default: 3)
+# WORKER_MAX_SUBTITLE_SEARCH=3
+
+# Portal scan workers - for Stalker portal scanning (default: 2)
+# WORKER_MAX_PORTAL_SCANS=2
 
 # Worker cleanup interval in milliseconds (default: 1800000 = 30 minutes)
 # WORKER_CLEANUP_MS=1800000
 
 # Maximum log entries per worker in memory (default: 1000)
 # WORKER_MAX_LOGS=1000
+
+# =============================================================================
+# STREAMING CONFIGURATION (Advanced)
+# =============================================================================
+# Settings for the HLS proxy and stream handling
+
+# Proxy fetch timeout in milliseconds (default: 30000 = 30 seconds)
+# PROXY_FETCH_TIMEOUT_MS=30000
+
+# Maximum segment size in bytes (default: 52428800 = 50MB)
+# PROXY_SEGMENT_MAX_SIZE=52428800
+
+# Maximum retry attempts for proxy fetches on 5xx errors (default: 2)
+# PROXY_MAX_RETRIES=2
+
+# Default referer header for proxy requests (default: https://videasy.net)
+# DEFAULT_PROXY_REFERER=https://videasy.net
+
+# =============================================================================
+# PROVIDER CONFIGURATION (Advanced)
+# =============================================================================
+# Circuit breaker and caching settings for streaming providers
+
+# Maximum consecutive failures before circuit opens (default: 3)
+# PROVIDER_MAX_FAILURES=3
+
+# Time in ms before circuit breaker enters half-open state (default: 30000)
+# PROVIDER_CIRCUIT_HALF_OPEN_MS=30000
+
+# Time in ms before circuit breaker fully resets (default: 60000)
+# PROVIDER_CIRCUIT_RESET_MS=60000
+
+# TTL for provider result cache entries in ms (default: 30000)
+# PROVIDER_CACHE_TTL_MS=30000
+
+# Number of providers to try in parallel mode (default: 3)
+# PROVIDER_PARALLEL_COUNT=3
+
+# =============================================================================
+# BROWSER SOLVER (Advanced)
+# =============================================================================
+# Cloudflare bypass using headless browser
+# Requires Chromium/Chrome to be installed
+# Resource intensive - disabled by default in Docker
+
+# Enable browser solver (default: false in Docker, true otherwise)
+# BROWSER_SOLVER_ENABLED=false
+
+# Number of browser instances in pool (default: 2, range: 1-10)
+# BROWSER_SOLVER_POOL_SIZE=2
+
+# Maximum concurrent browser operations (default: 3, range: 1-10)
+# BROWSER_SOLVER_MAX_CONCURRENT=3
+
+# Solve timeout in SECONDS (default: 60, range: 10-300)
+# BROWSER_SOLVER_TIMEOUT=60
+
+# Cookie cache TTL in SECONDS (default: 3600 = 1 hour, range: 60-86400)
+# BROWSER_SOLVER_CACHE_TTL=3600
+
+# Run browser in headless mode (default: true)
+# BROWSER_SOLVER_HEADLESS=true
+
+# Custom user agent for browser solver
+# BROWSER_SOLVER_USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36
+
+# Proxy configuration for browser solver
+# BROWSER_SOLVER_PROXY=http://proxy.example.com:8080
+# BROWSER_SOLVER_PROXY_USER=username
+# BROWSER_SOLVER_PROXY_PASS=password
+
+# =============================================================================
+# LIVE TV (Advanced)
+# =============================================================================
+# EPG and Live TV scheduling settings
+
+# Startup grace period before EPG tasks run in ms (default: 30000 = 30 seconds)
+# EPG_STARTUP_GRACE_MS=30000
 
 # =============================================================================
 # GRACEFUL SHUTDOWN
@@ -74,9 +185,6 @@
 
 # Database is SQLite stored at data/cinephage.db
 # This is created automatically on first run
-
-# Migrations folder (default: ./drizzle) - usually no need to change
-# MIGRATIONS_PATH=./drizzle
 
 # =============================================================================
 # APPLICATION MODE (Usually auto-detected)
