--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
 		"chokidar": "^5.0.0",
 		"crypto-js": "^4.2.0",
 		"fast-xml-parser": "^5.3.3",
+		"fflate": "^0.8.2",
+		"guessit-js": "^1.0.1",
 		"js-yaml": "^4.1.1",
 		"node-unrar-js": "^2.0.2",
 		"parse-torrent": "^11.0.19",
