fix: add complete Firefox browser dependencies for Camoufox in Docker
- Add xvfb, libgl1-mesa-dri, libgl1-mesa-glx for glxtest GPU detection
- Run 'npx playwright install-deps firefox' for full browser deps (Byparr approach)
- Use 'headless: virtual' mode for internal Xvfb display in Docker
- Add 'init: true' to docker-compose.yaml to prevent zombie processes

Fixes Captcha Solver browser launch failures with glxtest/graphics errors.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
     # build: .  # Uncomment to build locally (requires cloning the repo)
     container_name: cinephage
     restart: unless-stopped
+    init: true # Use tini to prevent zombie browser processes
 
     # -------------------------------------------------------------------------
     # USER PERMISSIONS
