--- a/data/indexers/definitions/eztv.yaml
+++ b/data/indexers/definitions/eztv.yaml
@@ -1,110 +1,138 @@
 ---
+# EZTV - Native Cinephage Definition
+# Uses the official EZTV JSON API for reliable TV show searching
+# Supports IMDB ID lookup for Sonarr integration
+
 id: eztv
 name: EZTV
-description: 'EZTV is a Public torrent site for TV shows'
-language: en-US
+description: EZTV is a public torrent site for TV shows with IMDB lookup support
 type: public
+protocol: torrent
+language: en-US
 encoding: UTF-8
 requestdelay: 2
+
 links:
   - https://eztvx.to/
   - https://eztv.wf/
   - https://eztv.tf/
-  - https://eztv.yt/
-  - https://eztv1.xyz/
+
 legacylinks:
+  - https://eztv.re/
   - https://eztv.ag/
+  - https://eztv.io/
   - https://eztv.it/
   - https://eztv.ch/
-  - https://eztv.io/
-  - https://eztv.re/
-  - https://eztv.li/
-  - https://eztv.mrunblock.bond/
-  - https://eztv.nocensor.cloud/
-  - https://eztv.unblockninja.com/
-  - https://eztv.ninjaproxy1.com/
-  - https://eztv.proxyninja.org/
-  - https://eztv.abcproxy.org/
-  - https://eztv.unblockit.download/
 
 caps:
-  categories:
-    '5000': TV
+  modes:
+    search: [q]
+    tv-search: [q, imdbid, season, ep]
 
   categorymappings:
     - id: '1'
-      cat: '5000'
-      desc: TV
+      cat: TV
+      desc: TV Shows
       default: true
+    - id: 'tv-hd'
+      cat: TV/HD
+      desc: TV HD
+    - id: 'tv-sd'
+      cat: TV/SD
+      desc: TV SD
 
-  modes:
-    search: [q]
-    tv-search: [q, season, ep]
-
-settings: []
+settings:
+  - name: limit
+    type: select
+    label: Results per page
+    default: '100'
+    options:
+      '50': '50'
+      '100': '100'
 
 search:
   paths:
-    - path: '{{ if .Keywords }}search/{{ .Keywords }}{{ else }}home{{ end }}'
+    # IMDB search - preferred for Sonarr/Radarr integration
+    - path: /api/get-torrents
+      method: get
+      inputs:
+        imdb_id: '{{ .Query.IMDBIDShort }}'
+        limit: '{{ .Config.limit }}'
 
-  keywordsfilters:
-    - name: re_replace
-      args: ["\\bS\\d{2,3}\\b", '']
-    - name: trim
-    - name: replace
-      args: ['-', '']
-    - name: replace
-      args: [' ', '-']
-    - name: replace
-      args: ['&', '']
+    # Page-based browsing fallback (no keyword search supported by API)
+    - path: /api/get-torrents
+      method: get
+      inputs:
+        q: ''
+        limit: '{{ .Config.limit }}'
+        page: '1'
 
-  headers:
-    cookie:
-      [
-        'sort_no=100; q_filter=all; q_filter_web=on; q_filter_reality=on; q_filter_x265=on; layout=def_wlinks'
-      ]
+  allowEmptyInputs: true
+
+  response:
+    type: json
 
   rows:
-    selector: "table.forum_header_border:contains('Latest') tr[name='hover'].forum_header_border:has(a.magnet), table.forum_header_border:contains('Releases') tr[name='hover'].forum_header_border:has(a.magnet)"
-    filters:
-      - name: andmatch
+    selector: torrents
 
   fields:
+    _id:
+      selector: id
+
     category:
       text: '1'
+
     title:
-      selector: td:nth-child(2) a
-      attribute: title
-      filters:
-        - name: replace
-          args: ['[eztv]', '']
-        - name: re_replace
-          args: ["\\(.*\\)$", '']
-        - name: trim
+      selector: title
+
     details:
-      selector: td:nth-child(2) a
-      attribute: href
+      text: '{{ .Config.sitelink }}ep/{{ .Result._id }}'
+
     magnet:
-      selector: td:nth-child(3) a.magnet
-      attribute: href
-    download:
-      selector: td:nth-child(3) a.magnet
-      attribute: href
-    size:
-      selector: td:nth-child(4)
+      selector: magnet_url
+
+    infohash:
+      selector: hash
+
+    imdbid:
+      selector: imdb_id
       optional: true
-      default: '512 MB'
-    date:
-      selector: td:nth-child(5)
       filters:
-        - name: append
-          args: ' ago'
-        - name: fuzzytime
+        - name: prepend
+          args: 'tt'
+
+    season:
+      selector: season
+      optional: true
+
+    episode:
+      selector: episode
+      optional: true
+
+    date:
+      selector: date_released_unix
+      filters:
+        - name: dateparse
+          args: unix
+
+    size:
+      selector: size_bytes
+
     seeders:
-      selector: td:nth-child(6)
+      selector: seeds
+
     leechers:
-      text: '0'
+      selector: peers
+
+    poster:
+      selector: small_screenshot
+      optional: true
+      filters:
+        - name: prepend
+          args: 'https:'
+
     downloadvolumefactor:
       text: '0'
+
     uploadvolumefactor:
       text: '1'
